refactor: minimize code